Default the toolbar height to 44 and ignore safe area in Stack View.

Bug: 768868
Change-Id: I8c2de3f2788bb0af090293ac4ead13b23bb73c78